[tool.poetry]
name = "zeropark"
version = "0.1.0"
description = "An implementation of a zero-search autonomous parking pipeline using imitation learning and deep reinforcement learning for end-to-end vehicle parking"
authors = ["Udehlee","ritzeepita@gmail.com>"]
readme = "README.md"
license = ""

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = ">=1.25,<2.0"
matplotlib = ">=3.7,<3.10"
torch = "2.9.1"
torchvision = "0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
